# stm32f3-rust

./: Cargo.toml  Embed.toml  README.md  flake.nix  rust-toolchain.toml
.cargo/: config.toml
src/: main.rs
