[package]
name = "rust"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
panic-halt = "1.0.0"
stm32f3xx-hal = { version="0.10.0", features = ["stm32f303xc"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
